k8s/sbapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ruudniew-sbapi
  name: ruudniew-sbapi
  namespace: dutchdelhicacy
spec:
  ports:
    - name: "api"
      port: 3300
      targetPort: 3300
  selector:
    io.kompose.service: ruudniew-sbapi
